2019-06-XX Jan Kotanski <jan.kotanski@desy.de>
	* add instance option
	* tagged as 2.10.0

2019-06-14 Jan Kotanski <jan.kotanski@desy.de>
	* fix for switching off filters on an error
	* tagged as 2.9.5

2019-06-14 Jan Kotanski <jan.kotanski@desy.de>
	* add bytearray flag for TangoAttribute source
	* tagged as 2.9.4

2019-06-14 Jan Kotanski <jan.kotanski@desy.de>
	* workaround for a bug in the JPEG_RGB tango decoder
	* tagged as 2.9.3

2019-06-13 Jan Kotanski <jan.kotanski@desy.de>
	* add --filters option
	* fix manpages
	* fix adding labels
	* tagged as 2.9.2

2019-06-13 Jan Kotanski <jan.kotanski@desy.de>
	* make filter widget more visible
	* tagged as 2.9.1

2019-06-13 Jan Kotanski <jan.kotanski@desy.de>
	* add filter plugins
	* tagged as 2.9.0

2019-06-07 Jan Kotanski <jan.kotanski@desy.de>
	* fix for ZMQ sources and python3
	* fix for subtraction of unsigned images
	* tagged as 2.8.3

2019-05-15 Jan Kotanski <jan.kotanski@desy.de>
	* fix for crash on empty hidra server lineedit
	* tagged as 2.8.2

2019-05-02 Jan Kotanski <jan.kotanski@desy.de>
	* add update of icons on combobox editing finished
	* tagged as 2.8.1

2019-04-26 Jan Kotanski <jan.kotanski@desy.de>
	* add support for eiger2 and 1.8.0 API
	* tagged as 2.8.0

2019-04-25 Jan Kotanski <jan.kotanski@desy.de>
	* fix for update custom color gradient
	* tagged as 2.7.1

2019-04-25 Jan Kotanski <jan.kotanski@desy.de>
	* save/load custom color gradients in configuration
	* tagged as 2.7.0

2019-04-12 Jan Kotanski <jan.kotanski@desy.de>
	* add beam_x and beam_y parameters from CBF
	* save settings to file on change star label change
	* tagged as 2.6.2

2019-04-10 Jan Kotanski <jan.kotanski@desy.de>
	* fixes for NeXus image sources with 1D data
	* tagged as 2.6.1

2019-04-09 Jan Kotanski <jan.kotanski@desy.de>
	* add addtional histogram options: bins and data step
	* impove auto levels finding
	* fetch metadata form CBF and NeXus files
	* tagged as 2.6.0

2019-04-04 Jan Kotanski <jan.kotanski@desy.de>