@@ -1,4 +1,5 @@
-2019-06-XX Jan Kotanski <jan.kotanski@desy.de>
+2019-06-18 Jan Kotanski <jan.kotanski@desy.de>
+	* add RGB color channel
 	* add instance option
 	* tagged as 2.10.0
 
